Fix homepage floated image stretch bug

--- a/assets/src/sass/_components/_images.scss
+++ b/assets/src/sass/_components/_images.scss
@@ -278,6 +278,7 @@
   img {
     mix-blend-mode: luminosity;
     border-radius: $border-radius;
+    height: auto;
   }
 }
 
